--- a/thesis.tex
+++ b/thesis.tex
@@ -211,7 +211,7 @@ a high-level overview of the work done in simple, plain language.
 %%   Bibliography (References)
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
-\bibliographystyle{mscBA1} % the BibTeX style file to use %was mscBA
+\bibliographystyle{mscBA} % the BibTeX style file to use %was mscBA
 \bibliography{thesis}     % the BibTeX database file to use 
 
 \cleardoublepage
