--- a/ch3.tex
+++ b/ch3.tex
@@ -15,6 +15,15 @@
 
 \chapter{Data}\label{C.data}
 
+\begin{quote}
+We have some freedom in setting up our personal standards of beauty, but it is
+especially nice when the things we regard as beautiful are also regarded by
+other people as useful.
+
+\hspace{2cm}--- Donald Knuth, \emph{Computer Programming as an Art}
+\end{quote}
+
+
 \section{Introduction}\label{S.intro3}
 
 We begin this chapter by \ldots
