--- a/thesis.bib
+++ b/thesis.bib
@@ -381,3 +381,19 @@ author = {Sangdae, Park and Jung, Jae Hak},
   year={2009},
   organization={IEEE},
 }
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    Misc                                                                      %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@misc {Schaschke:2014,
+  author = {Carl Schaschke},
+  title = {A Dictionary of Chemical Engineering},
+  year = {2014},
+  publisher = {Oxford University Press},
+  address = {Oxford},
+  isbn = {9780199651450},
+  doi = {10.1093/acref/9780199651450.001.0001},
+}
+
