--- a/thesis.tex
+++ b/thesis.tex
@@ -29,12 +29,10 @@
 
 \documentclass[a4paper,12pt,bibtotoc]{book}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}              % ST
+\usepackage[T1]{fontenc}
 \usepackage{makeidx}
 \usepackage{amsthm,amsmath,amsfonts,amssymb,latexsym,graphicx,appendix,
 subfigure}
-%\usepackage[urw-garamond]{mathdesign} % ST
-
 \usepackage{algorithm2e}
 \usepackage[subfigure]{tocloft} % passing `subfigure' stops clash on compilation
 \usepackage{natbib}
@@ -121,7 +119,7 @@ University College Dublin
 
 %% Dedication
 \chapter*{Dedication} 
-To X, Y and Z (typically family members)
+To Seona
 
 
 %% Table of Contents
